crates/hdk/tests/macros/hdk_to_coordinates_not_enum.rs

use hdk::prelude::holochain_deterministic_integrity::prelude::*;

#[hdk_to_coordinates]
struct Foo;

fn main() {}
